<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutMeActivity">

    <TextView
        android:id="@+id/tv_about_developer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:textColor="@color/green"
        android:text="@string/about_developer"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_about_me"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="44dp"
        android:src="@drawable/me"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_about_developer" />

    <TextView
        android:id="@+id/tv_about_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/author"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/img_about_me"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/img_about_me"
        app:layout_constraintTop_toBottomOf="@+id/img_about_me" />

    <TextView
        android:id="@+id/tv_about_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author_title"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_about_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_about_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_about_name" />

    <TextView
        android:id="@+id/tv_about_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="12sp"
        android:text="@string/author_email"
        app:layout_constraintEnd_toEndOf="@+id/tv_about_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_about_title" />

</androidx.constraintlayout.widget.ConstraintLayout>